# finite

./: .gitignore  CHANGELOG.md  README.md  main.py  password_generator.py  pyproject.toml
.github/workflows/: ci.yml
app/: captcha.py  counter.py  main.py  password_generator.py
finite_core/src/: password_generator.py
finite_core/tests/: test_password_generator.py
src/: __init__.py  counter.py  password_generator.py
src/finite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_counter.py  test_password_generator.py
