[project]
name = "finite"
version = "0.7.0"
description = "Generates a random password. The password is unique can can never be generated again."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "commitizen>=4.13.7",
    "pytest>=9.0.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.7.0"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

[tool.pytest]
addopts = ["--import-mode=importlib"]
pythonpath = ["."]
